# spellcheck

./: Cargo.toml  LICENSE  Makefile  README.md  config.json  vimrc
src/: config.rs  main.rs
src/datafile/: fetch.rs  mod.rs
src/spell/: mod.rs  parse.rs  tree.rs
