[package]
name = "spellcheck"
version = "0.1.0"
edition = "2021"
authors = ["Batbold Dashzeveg <dbatbold@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
hyper = { features = ["runtime", "http1", "client"], version = "0.14.20" }
hyper-tls = "0.5"
tokio = { features = [], version = "1.21" }
